# multivm-workspace-tool

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md  index.html  package.json  project-structure.md  vite.config.ts  vitest.config.ts
.agents/: README.md  registry.json
.agents/divisions/: backend.md  frontend.md  operations.md  qa.md
.agents/executive/: escalation-matrix.md  product-director.md  technical-director.md
.agents/guidelines/: code-rules.md  git-conventions.md  naming-conventions.md  pre-work-checklist.md
.agents/protocols/: communication.md  cross-team.md  feature-implementation.md  hotfix.md  quick-decision.md
.agents/support/: documentation.md  security.md
.agents/teams/: grid-layout.md  process-resource.md  ssh-connection.md  terminal.md  ui-components.md  workset-store.md
.github/workflows/: bundle.yml  ci.yml  e2e.yml
.sisyphus/drafts/: ssh-terminal-grid-mvp.md
.sisyphus/plans/: ssh-terminal-grid.md
docs/: README.md  architecture.md  glossary.md  market-research.md  mvp-spec.md  prd.md
docs/design/: PRINCIPLES.md  design-system.md
docs/engineering/: PRINCIPLES.md  architecture.md
docs/engineering/adr/: README.md
docs/engineering/spikes/: README.md  spike-1-report.md  spike-1-runbook.md  spike-2-report.md  (+3 more)
docs/operations/: PRINCIPLES.md  ci-cd.md
docs/product/: PRINCIPLES.md  market-research.md  prd.md
docs/qa/: PRINCIPLES.md  mvp-spec.md  test-strategy.md
e2e/: package.json  tsconfig.json  wdio.conf.ts
e2e/specs/: app.spec.ts
src/: file_browser.ts  grid.ts  latency.ts  main.ts  markdown.ts  styles.css  terminal.ts  workspace.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: keystore.rs  lib.rs  main.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/ssh/: mod.rs  session.rs
src-tauri/src/workset/: mod.rs
src/__tests__/: grid.test.ts  markdown.test.ts  setup.ts
